<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24765" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24743"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LoginTesting" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndO-4v-eTb">
                                <rect key="frame" x="20" y="311.66666666666669" width="353" height="28.666666666666686"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0hh-kq-K2V">
                                <rect key="frame" x="20" y="360.33333333333331" width="353" height="44"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cCj-a8-fqZ">
                                <rect key="frame" x="20" y="420.33333333333331" width="353" height="44"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F3x-tE-dkS">
                                <rect key="frame" x="20" y="488.33333333333331" width="353" height="43.999999999999943"/>
                                <state key="normal" title="Login"/>
                                <buttonConfiguration key="configuration" style="filled" title="Submit"/>
                                <connections>
                                    <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MVk-RV-o8f"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="F3x-tE-dkS" firstAttribute="height" constant="44" id="btn-h"/>
                            <constraint firstItem="F3x-tE-dkS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="btn-lead"/>
                            <constraint firstItem="F3x-tE-dkS" firstAttribute="top" secondItem="cCj-a8-fqZ" secondAttribute="bottom" constant="24" id="btn-top"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="F3x-tE-dkS" secondAttribute="trailing" constant="20" id="btn-trail"/>
                            <constraint firstItem="0hh-kq-K2V" firstAttribute="height" constant="44" id="email-h"/>
                            <constraint firstItem="0hh-kq-K2V" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="email-lead"/>
                            <constraint firstItem="0hh-kq-K2V" firstAttribute="top" secondItem="ndO-4v-eTb" secondAttribute="bottom" constant="20" id="email-top"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0hh-kq-K2V" secondAttribute="trailing" constant="20" id="email-trail"/>
                            <constraint firstItem="ndO-4v-eTb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="lbl-cy"/>
                            <constraint firstItem="ndO-4v-eTb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="lbl-lead"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ndO-4v-eTb" secondAttribute="trailing" constant="20" id="lbl-trail"/>
                            <constraint firstItem="cCj-a8-fqZ" firstAttribute="height" constant="44" id="pass-h"/>
                            <constraint firstItem="cCj-a8-fqZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pass-lead"/>
                            <constraint firstItem="cCj-a8-fqZ" firstAttribute="top" secondItem="0hh-kq-K2V" secondAttribute="bottom" constant="16" id="pass-top"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cCj-a8-fqZ" secondAttribute="trailing" constant="20" id="pass-trail"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="emailTextField" destination="0hh-kq-K2V" id="SAz-Oo-MJU"/>
                        <outlet property="loginButton" destination="F3x-tE-dkS" id="xgK-Nv-zul"/>
                        <outlet property="loginLabel" destination="ndO-4v-eTb" id="uR8-wx-RWp"/>
                        <outlet property="passwordTextField" destination="cCj-a8-fqZ" id="uoF-0Z-Img"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="138.1679389312977" y="130.98591549295776"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
